Fix ICE org report lines

--- a/views/system_stats.pug
+++ b/views/system_stats.pug
@@ -79,9 +79,9 @@ block dashboardContent
           th(colspan='3')
         each iceOrg in iceOrgUsage
           tr
+            td #{iceOrg.org}
             td #{(parseInt(iceOrg.sent, 10) / 1024 / 1024 / 1024).toFixed(3)} GB
             td #{(parseInt(iceOrg.received, 10) / 1024 / 1024 / 1024).toFixed(3)} GB
-            td #{iceOrg.received}
             td #{iceOrg.count}
 
     table
