Fix percentages for TURN usage

--- a/views/system_stats.pug
+++ b/views/system_stats.pug
@@ -67,20 +67,20 @@ block dashboardContent
           th TURN-using Sessions
           td Total
           td -
-          td #{sessionStats.total_turn.one_day} (#{(sessionStats.total_turn.one_day / (sessionStats.total.one_day || 1)).toFixed(1)}%)
-          td #{sessionStats.total_turn.week} (#{(sessionStats.total_turn.week / (sessionStats.total.week || 1)).toFixed(1)}%)
+          td #{sessionStats.total_turn.one_day} (#{(sessionStats.total_turn.one_day / (sessionStats.total.one_day || 1) * 100).toFixed(1)}%)
+          td #{sessionStats.total_turn.week} (#{(sessionStats.total_turn.week / (sessionStats.total.week || 1) * 100).toFixed(1)}%)
         tr
           td
           td Mobile 
           td -
-          td #{sessionStats.mobile_turn.one_day} (#{(sessionStats.mobile_turn.one_day / (sessionStats.mobile.one_day || 1)).toFixed(1)}%)
-          td #{sessionStats.mobile_turn.week} (#{(sessionStats.mobile_turn.week / (sessionStats.mobile.week || 1)).toFixed(1)}%)
+          td #{sessionStats.mobile_turn.one_day} (#{(sessionStats.mobile_turn.one_day / (sessionStats.mobile.one_day || 1) * 100).toFixed(1)}%)
+          td #{sessionStats.mobile_turn.week} (#{(sessionStats.mobile_turn.week / (sessionStats.mobile.week || 1) * 100).toFixed(1)}%)
         tr
           td
           td Web 
           td -
-          td #{sessionStats.web_turn.one_day} (#{(sessionStats.web_turn.one_day / (sessionStats.web.one_day || 1)).toFixed(1)}%)
-          td #{sessionStats.web_turn.week} (#{(sessionStats.web_turn.week / (sessionStats.web.week || 1)).toFixed(1)}%)
+          td #{sessionStats.web_turn.one_day} (#{(sessionStats.web_turn.one_day / (sessionStats.web.one_day || 1) * 100).toFixed(1)}%)
+          td #{sessionStats.web_turn.week} (#{(sessionStats.web_turn.week / (sessionStats.web.week || 1) * 100).toFixed(1)}%)
 
     table
       thead
