org activity dashboard

--- a/views/system_stats.pug
+++ b/views/system_stats.pug
@@ -24,6 +24,8 @@ block dashboardContent
         a(href='/dashboard/histograms/occupants') Room Occupants Stats
       li
         a(href='/dashboard/rooms') Recent Rooms
+      li
+        a(href='/dashboard/orgs') Org Activity
 
     table
       thead
