Format last activity date in customer activity summary.

--- a/views/orgs_activity.pug
+++ b/views/orgs_activity.pug
@@ -61,7 +61,7 @@ block dashboardContent
             td #{org.active.web_count}
             td #{org.active.mobile_count}
           tr
-            th #{org.last_activity}
+            th #{org.last_activity.toLocaleString()}
             th Today
             td #{org.one_day.config_request_count}
             td #{org.one_day.session_connected_count}
